--- a/main.yml
+++ b/main.yml
@@ -25,6 +25,7 @@
       - adobe-acrobat-reader
       - azure-data-studio
       - box-sync
+      - brave-browser
       - cisco-proximity
       - disk-inventory-x
       - drawio
