--- a/main.yml
+++ b/main.yml
@@ -603,8 +603,8 @@
       - Karten
       - Fotos
     dockitems_to_persist:
-      - name: Google Chrome
-        path: "/Applications/Google Chrome.app"
+      - name: Brave Browser
+        path: "/Applications/Brave Browser.app"
         pos: 1
       - name: Firefox
         path: "/Applications/Firefox.app"
