change password manager

--- a/main.yml
+++ b/main.yml
@@ -54,7 +54,7 @@
       - cyberduck
       - db-browser-for-sqlite
       - docker
-      - keepassx
+      - keepassxc
       - kitematic
       - imagealpha
       - imageoptim
