--- a/main.yml
+++ b/main.yml
@@ -41,6 +41,7 @@
       - plex-media-player
       - sixtyforce
       - spectacle
+      - spotify
       - steam
       - the-unarchiver
       - vlc
