add pkm systems

--- a/main.yml
+++ b/main.yml
@@ -29,10 +29,12 @@
       - drawio
       - google-backup-and-sync
       - licecap
+      - logseq
       - michaelvillar-timer
       - microsoft-azure-storage-explorer
       - microsoft-teams
       - musicbrainz-picard
+      - obsidian
       - openemu
       - plex-media-player
       - sixtyforce
