--- a/main.yml
+++ b/main.yml
@@ -25,7 +25,7 @@
       - brave-browser
       - disk-inventory-x
       - drawio
-      - google-backup-and-sync
+      - google-drive
       - licecap
       - logseq
       - michaelvillar-timer
