--- a/main.yml
+++ b/main.yml
@@ -24,63 +24,14 @@
       osx_defaults: domain="{{ item.domain }}" key="{{ item.key }}" type="{{ item.type }}" value="{{ item.value }}" state=present
       with_items: "{{ osx_defaults }}"
       tags: ['osx']
-#     - name: create /tmp/powerline directory
-#       file: path=/tmp/powerline state=directory
-#       tags:
-#         - shell
-#     - name: git clone Powerline fonts repository
-#       git: repo='https://github.com/powerline/fonts.git' dest=/tmp/powerline
-#       tags:
-#         - shell
-#     - name: install script of Powerline fonts
-#       command: /tmp/powerline/install.sh
-#       tags:
-#         - shell
-#     - name: cleanup Powerline fonts installation
-#       file: path=/tmp/powerline state=absent
-#       tags:
-#         - shell
-#     - name: Import iTerm2 settings, incl. fonts
-#       copy:
-#         src: templates/com.googlecode.iterm2.plist
-#         dest: ~/Library/Preferences/com.googlecode.iterm2.plist
-#       tags:
-#         - shell
-#     - name: ".zshrc.local"
-#       template:
-#         src: templates/zshrc.local
-#         dest: ~/.zshrc.local
-#       tags:
-#         - dotfiles
-#     - name: Install global Composer packages.
-#       composer:
-#         command: "{{ (item.state | default('present') == 'absent') | ternary('remove', 'require') }}"
-#         arguments: "{{ item.name | default(item) }} {{ item.version | default('@stable') }}"
-#         # Ansible 2.4 supports `global_command` making `working_dir` optional.
-#         working_dir: "{{ lookup('env', 'COMPOSER_HOME') | default('~/.composer', true) }}"
-#       with_items: "{{ composer_packages }}"
-#       tags:
-#         - composer
-#     - name: Install global NPM packages.
-#       npm:
-#         name: "{{ item.name | default(item) }}"
-#         state: "{{ item.state | default('present') }}"
-#         version: "{{ item.version | default(omit) }}"
-#         global: yes
-#         executable: "{{ item.executable | default(omit) }}"
-#       with_items: "{{ npm_packages }}"
-#       tags:
-#         - npm
-#     - name: Install python packages.
-#       pip:
-#         name: "{{ item.name | default(item) }}"
-#       with_items: "{{ pip_packages }}"
-#       tags:
-#         - pip
-#     - name: create ~/Projects directory
-#       file: path=~/Projects state=directory
-#       tags:
-#         - projects
-    - name: Restart SystemUIServer e.g. show date in menu
-      command: killall SystemUIServer
-      tags: ['osx']
+    - import_tasks: tasks/terminal.yml
+      tags: ['zsh']
+    - import_tasks: tasks/packages.yml
+      tags: ['packages']
+    - name: create ~/Projects directory
+      file: path=~/Projects state=directory
+      tags: ['projects']
+    # - name: Restart SystemUIServer e.g. show date in menu
+    #   command: killall SystemUIServer
+    #   tags: ['osx']
+
