--- a/default.config.yml
+++ b/default.config.yml
@@ -90,6 +90,10 @@ dockitems_persist:
     path: "/Applications/Sourcetree.app"
     pos: 5
 
+  - name: "iTerm"
+    path: "/Applications/iTerm.app"
+    pos: 6
+
 zsh_autosuggestions_bind_key: "^U"
 zsh_hotkeys_extras:
   - { hotkey: "^[^[[D", action: backward-word } # alt+left
