--- a/default.config.yml
+++ b/default.config.yml
@@ -41,6 +41,10 @@ homebrew_installed_packages:
   - ddev
   - derailed/k9s/k9s
   - dive
+  # Fix the iterm error caused by viasite-ansible.zsh
+  # Error message: (anon):7: command not found: fd
+  # Cause by a requirement of fzf_widgets: sorenson-axial/fzf-widgets
+  - fd
   - findutils
   - fzf
   - git
