build: add conventional commit linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
           npm install commitlint@latest
 
       - name: Validate current commit (last commit) with commitlint
-        if: github.event_name == 'push'a
+        if: github.event_name == 'push'
         run: npx commitlint --last --verbose
 
       - name: Validate PR commits with commitlint
