--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "name": "tell",
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/prompt-cli": "^19.3.0",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "semantic-release": "^23.0.8"
   },
   "scripts": {
     "commit": "commit",
