--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         run: npx commitlint --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }} --verbose
   release:
     name: Release
+    needs: commitlint
     runs-on: ubuntu-latest
     permissions:
       contents: write # to be able to publish a GitHub release
