chore: add package version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tell",
+  "version": "1.0.0",
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
