--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-node@v4
         with:
-          node-version: '21'
+          node-version: "21"
       - run: npm ci
       - name: Validate current commit (last commit) with commitlint
         if: github.event_name == 'push'
