--- a/main.yml
+++ b/main.yml
@@ -6,25 +6,25 @@
     - role: elliotweiser.osx-command-line-tools
     - role: bussmeyer.dotfiles
     - role: geerlingguy.mac.homebrew
-      tags: ['homebrew']
+      tags: ["homebrew"]
     - role: geerlingguy.mac.mas
       when: mas_installed_apps or mas_installed_app_ids
-      tags: ['mas']
+      tags: ["mas"]
     - role: geerlingguy.mac.dock
       when: configure_dock
-      tags: ['dock']
+      tags: ["dock"]
     - role: viasite-ansible.zsh
-      tags: ['zsh']
+      tags: ["zsh"]
 
   vars_files:
     - default.config.yml
 
   tasks:
     - import_tasks: tasks/osx.yml
-      tags: ['osx']
+      tags: ["osx"]
     - import_tasks: tasks/terminal.yml
-      tags: ['zsh']
+      tags: ["zsh"]
     - import_tasks: tasks/packages.yml
-      tags: ['packages']
+      tags: ["packages"]
     - import_tasks: tasks/projects.yml
-      tags: ['projects']
+      tags: ["projects"]
