--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -13,7 +13,7 @@ APPLY_FIXES: all
 # If you use ENABLE_LINTERS variable, all other linters will be disabled by
 # default
 # ENABLE_LINTERS:
-
+EXCLUDED_DIRECTORIES: [".git", "node_modules", "roles"]
 # DISABLE:
 # - COPYPASTE # Uncomment to disable checks of excessive copy-pastes
 # - SPELL # Uncomment to disable checks of spelling mistakes
