feat: re-add package manager for php, npm, python package

--- a/default.config.yml
+++ b/default.config.yml
@@ -116,6 +116,11 @@ osx_defaults:
     key: "PromptOnQuit"
     type: bool
     value: false
+
+composer_packages: []
+npm_packages: []
+pip_packages: []
+
   ###############################################################################
   # Safari                                                                      #
   ###############################################################################
