--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,26 +1,22 @@
 ---
-#     - name: Install global Composer packages.
-#       composer:
-#         command: "{{ (item.state | default('present') == 'absent') | ternary('remove', 'require') }}"
-#         arguments: "{{ item.name | default(item) }} {{ item.version | default('@stable') }}"
-#         # Ansible 2.4 supports `global_command` making `working_dir` optional.
-#         working_dir: "{{ lookup('env', 'COMPOSER_HOME') | default('~/.composer', true) }}"
-#       with_items: "{{ composer_packages }}"
-#       tags:
-#         - composer
-#     - name: Install global NPM packages.
-#       npm:
-#         name: "{{ item.name | default(item) }}"
-#         state: "{{ item.state | default('present') }}"
-#         version: "{{ item.version | default(omit) }}"
-#         global: yes
-#         executable: "{{ item.executable | default(omit) }}"
-#       with_items: "{{ npm_packages }}"
-#       tags:
-#         - npm
-#     - name: Install python packages.
-#       pip:
-#         name: "{{ item.name | default(item) }}"
-#       with_items: "{{ pip_packages }}"
-#       tags:
-#         - pip
+- name: Install global Composer packages.
+  composer:
+    command: "{{ (item.state | default('present') == 'absent') | ternary('remove', 'require') }}"
+    arguments: "{{ item.name | default(item) }} {{ item.version | default('@stable') }}"
+    # Ansible 2.4 supports `global_command` making `working_dir` optional.
+    working_dir: "{{ lookup('env', 'COMPOSER_HOME') | default('~/.composer', true) }}"
+  with_items: "{{ composer_packages }}"
+
+- name: Install global NPM packages.
+  npm:
+    name: "{{ item.name | default(item) }}"
+    state: "{{ item.state | default('present') }}"
+    version: "{{ item.version | default(omit) }}"
+    global: yes
+    executable: "{{ item.executable | default(omit) }}"
+  with_items: "{{ npm_packages }}"
+
+- name: Install python packages.
+  pip:
+    name: "{{ item.name | default(item) }}"
+  with_items: "{{ pip_packages }}"
